syntax = "proto3";

package ddtrace;

option go_package = "gitlab.jiagouyun.com/cloudcare-tools/datakit/plugins/inputs/ddtrace";

import "plugins/inputs/ddtrace/span.proto";

message APIDDTrace {
  uint64 traceID = 1;
  repeated DDSpan spans = 2;
  int64 startTime = 6;
  int64 endTime = 7;
}
